@@ -259,13 +259,13 @@ DrawBorder=yes
 ## Cwlinux driver ##
 [CwLnx]
 
-# Select the LCD model [default: 12232; legal: 12232, 1602]
+# Select the LCD model [default: 12232; legal: 12232, 12832, 1602]
 Model=12232
 
 # Select the output device to use [default: /dev/lcd]
 Device=/dev/ttyUSB0
 
-# Select the LCD size [default: depending on model: 12232: 20x4, 1602: 16x2]
+# Select the LCD size [default: depending on model: 12232: 20x4, 12832: 21x4, 1602: 16x2]
 Size=20x4
 
 # Set the communication speed [default: 19200; legal: 9600, 19200]
