@@ -2,7 +2,7 @@
 <title>The CwLnx Driver</title>
 
 <para>
-This section talks about using LCDproc with the serial / USB LCDs CW12232
+This section talks about using LCDproc with the serial / USB LCDs CW12232, CW12832
 and CW1602 by CwLinux.
 </para>
 
@@ -12,13 +12,16 @@ and CW1602 by CwLinux.
 <para>
 The CwLinux CW12232 LCDs are graphical LCDs with 122 x 32 dots
 that also have a text mode with 20 x 4 characters,
+the CW12832 are graphical displays with 128 x 32 dots and a
+21 x 4 character text mode, 
 the CW1602 LCDs are character LCDs that are 16 characters wide and
 2 lines high.
 </para>
 
 <para>
 The modules can be ordered bare or as part of a kit mounted
-on brackets that fit in half-height 5.25" drive bays.
+on brackets that fit in half-height 5.25" (CW12232 and CW1608)
+or 3,5" (CW12832) drive bays.
 The mounting brackets optionally feature a 6 button keypad that
 makes use of the keypad connector on the display modules.
 </para>
@@ -30,7 +33,7 @@ as 4 general purpose IO ports.
 </para>
 
 <para>
-The CW12232 and CW1608 come in 2 variants that differ how they communicate
+The displays come in 2 variants that differ how they communicate
 with the host: The serial modules are connected to the PC using a serial
 RS232 connection getting operating power using the standard floppy drive
 power connector, while the USB modules only require an USB connection.
@@ -58,12 +61,14 @@ For more information see the
     <arg choice="plain">
     <group choice="req">
       <arg choice="plain"><literal><emphasis>12232</emphasis></literal></arg>
+      <arg choice="plain"><literal>12832</literal></arg>
       <arg choice="plain"><literal>1602</literal></arg>
     </group>
     </arg>
   </term>
   <listitem><para>
-    Select the LCD model [default: <literal>12232</literal>; legal: <literal>12232</literal>, <literal>1602</literal>]
+    Select the LCD model [default: <literal>12232</literal>;
+    legal: <literal>12232</literal>, <literal>12232</literal>, <literal>1602</literal>]
   </para></listitem>
 </varlistentry>
 
@@ -89,6 +94,7 @@ For more information see the
   </term>
   <listitem><para>
     Select the LCD size [default: depending on model: 12232: <literal>20x4</literal>,
+                                                      12832: <literal>21x4</literal>]
                                                        1602: <literal>16x2</literal>]
   </para></listitem>
 </varlistentry>
